fix: align changes in main component

--- a/src/components/Main.css
+++ b/src/components/Main.css
@@ -1,5 +1,6 @@
 .main-card {
   display: flex;
+  flex-direction: column;
   padding: 200px 100px;
   width: 70%;
 
@@ -19,6 +20,7 @@
   border: 2px solid #0081C9;
   border-radius: 70%;
 
+  margin-top: 30px;
   animation: updown 3s linear infinite;
 }
 
@@ -38,7 +40,7 @@
   display: flex;
   flex-direction: column;
   color: white;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .main-info h1 {
@@ -46,17 +48,13 @@
   margin: 0px 2px;
 }
 
-.main-info h3 {
-  text-align: initial;
-}
-
 .main-welcome {
   letter-spacing: 0.8px;
-  padding: 8px 10px;
+  padding: 10px;
   background: linear-gradient(90.21deg, #000046 -5.91%, #0e5a6e 111.58%);
-
   border: 1px solid #0083c99a;
+
   font-size: 26px;
-  margin-bottom: 16px;
+  margin-bottom: 30px;  
 }
 
